<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccount"
    android:background="@color/background">

    <include layout="@layout/toolbar"/>

    <!-- Layout to contain the login items -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="30dp">

        <!-- User's name -->
        <EditText
            android:id="@+id/nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"

            android:textSize="@dimen/sub_text_size"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/mainTextColor"
            android:hint="@string/name_hint"
            android:inputType="textEmailAddress"
            android:ems="10"

            android:background="@drawable/rounded_corner_data_entry"
            android:padding="@dimen/rounded_corner_padding"/>

        <!-- Email address for login -->
        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"

            android:textSize="@dimen/sub_text_size"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/mainTextColor"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:ems="10"

            android:background="@drawable/rounded_corner_data_entry"
            android:padding="@dimen/rounded_corner_padding"/>

        <!-- Password for login -->
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"

            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/mainTextColor"
            android:textColorHint="@color/hintTextColor"
            android:textSize="@dimen/sub_text_size"

            android:background="@drawable/rounded_corner_data_entry"
            android:padding="@dimen/rounded_corner_padding"/>

        <!-- Password for login -->
        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"

            android:ems="10"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/mainTextColor"
            android:textColorHint="@color/hintTextColor"
            android:textSize="@dimen/sub_text_size"

            android:background="@drawable/rounded_corner_data_entry"
            android:padding="@dimen/rounded_corner_padding"/>

    </LinearLayout>

    <!-- Container for the create new account button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0">

        <!-- Create new account button -->
        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"

            android:ems="10"
            android:textColor="@color/mainTextColor"
            android:textColorHint="@color/hintTextColor"
            android:textSize="@dimen/sub_text_size"
            android:text="@string/create_acc_btn"

            android:background="@drawable/rounded_corner_btn"
            android:padding="@dimen/rounded_corner_padding"/>

    </LinearLayout>

</LinearLayout>