<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Budget">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <include layout="@layout/toolbar"/>

        <!-- Monthly budget container -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/monthlyBudgetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/mainTextColor"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/monthly_budget_title"/>

            <!-- Container for text to display monthly budget -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spentMonthly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textSize="@dimen/sub_text_size"
                    android:textColor="@color/mainTextColor"
                    android:textStyle="bold"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:textSize="@dimen/sub_text_size"
                    android:textColor="@color/mainTextColor"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="/"/>

                <TextView
                    android:id="@+id/monthlyBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sub_text_size"
                    android:textColor="@color/mainTextColor"
                    android:textStyle="bold"
                    android:gravity="start"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/rounded_corner_data_entry"
                android:padding="2dp">

            <!-- Monthly budget bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/CustomProgressBarHorizontal"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corner_data_entry"
                android:indeterminateOnly="false"
                android:progressTint="@color/colorPrimaryDark" />

            </LinearLayout>

            <Button
                android:id="@+id/editBudgetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_gravity="center"

                android:textColor="@color/mainTextColor"
                android:background="@drawable/rounded_corner_btn"
                android:padding="@dimen/rounded_corner_padding"
                android:text="@string/edit_budget_btn" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:fillViewport="true">

            <!-- Transactions this month container -->
            <LinearLayout
                android:id="@+id/thisMonthTransactionsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/monthlyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:textSize="@dimen/title_text_size"
                    android:textColor="@color/mainTextColor"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/monthly_transactions_title"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <include layout="@layout/nav_drawer_layout"/>

</android.support.v4.widget.DrawerLayout>